--- a/movie_bookings/templates/movie_bookings/booking.html
+++ b/movie_bookings/templates/movie_bookings/booking.html
@@ -1,6 +1,54 @@
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add bird</title>
+</head>
+<body>
+    <h1>Add a new form</h1>
+    <form id="form-container" method="POST">
+        {% csrf_token %}
+        {{formset.management_form}}
+        {% for form in formset %}
+        <div class="book-form">
+            
+        {{form.as_p}}
+        <div id="delete_last_form">
+        </div>
+        </div>
+        
+        {% endfor %}
+        
+        <button id="add-form" type="button">Add new form</button>
+        <button type="submit">Create Form</button>
+    </form>
+    
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
 
+    <script>
+        let birdForm = document.querySelectorAll(".book-form")
+        let container = document.querySelector("#form-container")
+        let addButton = document.querySelector("#add-form")
+        let totalForms = document.querySelector("#id_form-TOTAL_FORMS")
+
+        let formNum = birdForm.length-1
+        addButton.addEventListener('click', addForm)
+
+        function addForm(e){
+            e.preventDefault()
+
+            $("#delete_last_form").html(`<button id="delete-form" type="button" >delete form</button>`)
+            
+            let newForm = birdForm[0].cloneNode(true)
+            let formRegex = RegExp(`form-(\\d){1}-`,'g')
+
+            formNum++
+            newForm.innerHTML = newForm.innerHTML.replace(formRegex, `form-${formNum}-`)
+            container.insertBefore(newForm, addButton)
+            
+            totalForms.setAttribute('value', `${formNum+1}`)
+        }
+    </script>
+    </body>
+</html>
